Google ad style and fix for images on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -276,10 +276,11 @@ hr {
 
   .adsbygoogle {
     border-top: 3px solid #fa5757;
-    padding: 30px 0;
-    height: 185px;
+    padding: 10px 0 0 0;
+    height: 100px;
     background-color: #FAFAFA;
   }
+
 
   p {
     font-weight: 400;
@@ -404,6 +405,18 @@ hr {
 
   .row {
     .container();
+  }
+}
+
+@media (max-width: 1100px) {
+  .blog-post {
+    img {
+      max-width: 100%;
+      padding: 20px 20px;
+      min-width: 100%;
+      margin: 20px 0 20px 0;
+      border: 1px solid #d6d6d6;
+    }
   }
 }
 
